<resources>
    <string name="app_name">ATM</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_finance">Finance</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="remember_account">remember account</string>
    <string name="map">Map</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_info">Check that the password is correct, and then try again.</string>
    <string name="ok">OK</string>
    <string name="confirm_reg"> confirm registration ?</string>
    <string name="reg_success">Registration success</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_up_failed_info">This account has already been registered or No password entered.</string>
    <string name="cancel">cancel</string>
    <string name="news">News</string>
    <string name="date">Date</string>
    <string name="info">Info</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
</resources>
